k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minicloud
  labels:
    name: minicloud
